--- a/Trabajo web responsive/curiosidades.html
+++ b/Trabajo web responsive/curiosidades.html
@@ -14,16 +14,17 @@
     <header>
         <div class="logo">
             <h1>La<br> Comunidad<span class="span"> Wiki</span></h1>
+            <div class="boton-menu" id="btn-menu">
+                <img src="./img/menu.png" alt="menu responsive">
+            </div>
         </div>
-        <div class="imagen-logo">
-            <img src="img/The lord fo the rings header.png" alt="logo header">
-        </div>
-        <div class="div-nav">
-            <ul class="nav">
-                <li><a href="index.html" class="link">Inicio</a></li>
+
+        <div class="menu ocultar">
+            <ul class="navegacion">
+                <li><a href="index.html" class="link">Home</a></li>
                 <li><a href="personajes.html" class="link">Personajes</a></li>
-                <li><a href="contactanos.html" class="link">Contactanos</a></li>
-                </ul>
+                <li><a href="contactanos.html" class="link">Crea tu personaje</a></li>
+            </ul>
         </div>
     </header>
     <div class="curiosidades-cuerpo">
@@ -179,6 +180,6 @@
 
 
 
-
+    <script src="js/main.js"></script>
 </body>
 </html>
