--- a/Trabajo web responsive/index.html
+++ b/Trabajo web responsive/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
 
-        <div class="menu">
+        <div class="menu ocultar">
             <ul class="navegacion">
                 <li><a href="curiosidades.html" class="link">Curiosidades</a></li>
                 <li><a href="personajes.html" class="link">Personajes</a></li>
