--- a/Trabajo web responsive/creaTuPersonaje.html
+++ b/Trabajo web responsive/creaTuPersonaje.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La comunidad Wiki contactanos</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,34 +25,17 @@
             <ul>
                 <li><a href="index.html" class="link">Home</a></li>
                 <li><a href="personajes.html" class="link">Personajes</a></li>
-                <li><a href="contactanos.html" class="link">Crea tu personaje</a></li>
+                <li><a href="curiosidades.html" class="link">Curiosidades</a></li>
             </ul>
         </div>
         <div class="menu ocultar">
             <ul class="navegacion">
                 <li><a href="index.html" class="link">Home</a></li>
                 <li><a href="personajes.html" class="link">Personajes</a></li>
-                <li><a href="contactanos.html" class="link">Crea tu personaje</a></li>
+                <li><a href="curiosidades.html" class="link">Curiosidades</a></li>
             </ul>
         </div>
     </header>
-    <div class="cuerpo-pagina-contactanos"> 
-        <form action="" id="form">
-            <label for="nombre">Nombre:</label>
-                <input type="text" name="nombre" id="nombre" required>
-            <label for="email">Email:</label>
-                <input type="email" name="email" id="email" required>
-            <label for="contraseña">Contraseña:</label>
-                <input type="password" name="contraseña" id="contraseña" required>
-            <label for="captcha">Confirme que no eres un Orco: </label>
-                <p id="generador-captcha"></p>
-                <input type="text" id="captcha-usuario" name="captcha" required>
-                <p id="mensaje-validacion"></p>
-                <a href="creaTuPersonaje.html" class="ocultar2" id="crea_tu_personaje">Crea tu personaje</a>
-            <input type="submit" class="enviar"> 
-        </form>
-    </div>
-    
     <footer>
         <div class="redes-sociales">  
             <div class="contain-redes-sociales">
@@ -71,6 +54,7 @@
             </div>
         </div>
     </footer>
-    <script src="js/main.js"></script>
+
+<script src="js/main.js"></script>
 </body>
 </html>
