--- a/Trabajo web responsive/curiosidades.html
+++ b/Trabajo web responsive/curiosidades.html
@@ -14,11 +14,20 @@
     <header>
         <div class="logo">
             <h1>La<br> Comunidad<span class="span"> Wiki</span></h1>
-            <div class="boton-menu" id="btn-menu">
+            <div class="boton-menu">
                 <img src="./img/menu.png" alt="menu responsive">
             </div>
         </div>
-
+        <div class="imagen-logo">
+            <img src="img/The lord fo the rings header.png" alt="logo header">
+        </div>
+        <div class="nav-escritorio">
+            <ul>
+                <li><a href="index.html" class="link">Home</a></li>
+                <li><a href="personajes.html" class="link">Personajes</a></li>
+                <li><a href="contactanos.html" class="link">Crea tu personaje</a></li>
+            </ul>
+        </div>
         <div class="menu ocultar">
             <ul class="navegacion">
                 <li><a href="index.html" class="link">Home</a></li>
@@ -32,7 +41,7 @@
             <div class="lista-curiosidades">
                 <ul>
                     <li><a href="#curiosidad1">Voces de los personajes</a></li>
-                    <li><a href="#curiosidad2">cantidad de enemigos por pantallas</a></li>
+                    <li><a href="#curiosidad2">cantidad de enemigos</a></li>
                     <li><a href="#curiosidad3">Lo malo del juego</a></li>
                     <li><a href="#curiosidad4">Cinematicas</a></li>
                     <li><a href="#curiosidad5">Extras</a></li>
@@ -41,12 +50,12 @@
             </div>
             <div class="lista-curiosidades">
                 <ul>
-                    <li><a href="#curiosidad7">Brillo de la Espada de frodo</a></li>
+                    <li><a href="#curiosidad7">Espada de frodo</a></li>
                     <li><a href="#curiosidad8">Dificultad de enemigos</a></li>
                     <li><a href="#curiosidad9">Movimiento personajes</a></li>
-                    <li><a href="#curiosidad10">Juego inspirado en Gountlet</a></li>
+                    <li><a href="#curiosidad10">Juego inspirado en</a></li>
                     <li><a href="#curiosidad11">Niveles secretos</a></li>
-                    <li><a href="#curiosidad12">Desbloquear personajes secretos</a></li>
+                    <li><a href="#curiosidad12">Glitch secretos</a></li>
                     
                 </ul>
             </div>
