--- a/Trabajo web responsive/index.html
+++ b/Trabajo web responsive/index.html
@@ -19,7 +19,16 @@
                 <img src="./img/menu.png" alt="menu responsive">
             </div>
         </div>
-
+        <div class="imagen-logo">
+            <img src="img/The lord fo the rings header.png" alt="logo header">
+        </div>
+        <div class="nav-escritorio">
+            <ul>
+                <li><a href="curiosidades.html" class="link">Curiosidades</a></li>
+                <li><a href="personajes.html" class="link">Personajes</a></li>
+                <li><a href="contactanos.html" class="link">Crea tu personaje</a></li>
+            </ul>
+        </div>
         <div class="menu ocultar">
             <ul class="navegacion">
                 <li><a href="curiosidades.html" class="link">Curiosidades</a></li>
