--- a/Trabajo web responsive/contactanos.html
+++ b/Trabajo web responsive/contactanos.html
@@ -25,14 +25,14 @@
             <ul>
                 <li><a href="index.html" class="link">Home</a></li>
                 <li><a href="personajes.html" class="link">Personajes</a></li>
-                <li><a href="contactanos.html" class="link">Crea tu personaje</a></li>
+                <li><a href="curiosidades.html" class="link">Curiosidades</a></li>
             </ul>
         </div>
         <div class="menu ocultar">
             <ul class="navegacion">
                 <li><a href="index.html" class="link">Home</a></li>
                 <li><a href="personajes.html" class="link">Personajes</a></li>
-                <li><a href="contactanos.html" class="link">Crea tu personaje</a></li>
+                <li><a href="curiosidades.html" class="link">Curiosidades</a></li>
             </ul>
         </div>
     </header>
@@ -72,5 +72,6 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
+    <script src="js/captcha.js"></script>
 </body>
 </html>
