--- a/Trabajo web responsive/index.html
+++ b/Trabajo web responsive/index.html
@@ -39,15 +39,15 @@
     </header>
         <div class="cuerpo-pagina">
             <div class="info-principal">
-                <h2>Aca va el titulo principal</h2>
+                <h2>El mejor juego de la historia</h2>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque perspiciatis fugit saepe maxime. Doloremque
-                    fugiat ea nobis illum quod perspiciatis, enim assumenda corrupti officiis magnam dolorum maxime, repellat nostrum sit!
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque perspiciatis fugit saepe maxime. Doloremque
-                    fugiat ea nobis illum quod perspiciatis, enim assumenda corrupti officiis magnam dolorum maxime, repellat nostrum sit!
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque perspiciatis fugit saepe maxime. Doloremque
-                    fugiat ea nobis illum quod perspiciatis, enim assumenda corrupti officiis magnam dolorum maxime, repellat nostrum sit!
-                    Este texto explica quienes somos y de que se trata la pagina y que somos unos fanaticos de la saga
+                    Hola ¿como andan fanaticos del señor de los anillos? les contamos un poco nuestra historia, nosotros somos dos fanaticos de la famosa saga de tolkin y de los viedojuegos
+                    por ese motivo juntando nuestras dos pasiones decidimos cerar esta pagina.La misma esta diseñada a partir del videojuego de "El Señor De Los Anillos El Retorno Del Rey"(2003) para ps2 y pc.
+                    En la pagina se podran encontrar los personajes que ofrece el juego, sus respectivas habilidades y caracteristicas.
+                    Tambien encontraran una seccion de 12 curiosidades ineditas sobre el juego que pocos saben y demuestra lo bien hecho que esta
+                    para la epoca. Tambien tenemos una seccion especial la cual si se registran correctamente podran acceder a una seccion especial,
+                    en la que ustdes podran crear su propio personaje, si asi es leyeron bien, crear a su propio personaje.
+                    esta pagina esta hecha por fans para fans y queremos compartir todo sobre este juegazo de nuestra infancia.
                 </p>
             </div>
             <div class="datos">
