--- a/Trabajo web responsive/personajes.html
+++ b/Trabajo web responsive/personajes.html
@@ -24,14 +24,14 @@
         <div class="nav-escritorio">
             <ul>
                 <li><a href="index.html" class="link">Home</a></li>
-                <li><a href="personajes.html" class="link">Personajes</a></li>
+                <li><a href="curiosidades.html" class="link">Curiosidades</a></li>
                 <li><a href="contactanos.html" class="link">Crea tu personaje</a></li>
             </ul>
         </div>
         <div class="menu ocultar">
             <ul class="navegacion">
                 <li><a href="index.html" class="link">Home</a></li>
-                <li><a href="personajes.html" class="link">Personajes</a></li>
+                <li><a href="curiosidades.html" class="link">Curiosidades</a></li>
                 <li><a href="contactanos.html" class="link">Crea tu personaje</a></li>
             </ul>
         </div>
