ESTEE ES EL ULTIMA MODIFICACION RESPONSIVE

--- a/Trabajo web responsive/creaTuPersonaje.html
+++ b/Trabajo web responsive/creaTuPersonaje.html
@@ -14,13 +14,13 @@
     <header>
         <div class="logo">
             <h1>La<br> Comunidad<span class="span"> Wiki</span></h1>
-            <div class="boton-menu">
+            <figure class="boton-menu">
                 <img src="./img/menu.png" alt="menu responsive">
-            </div>
+            </figure>
         </div>
-        <div class="imagen-logo">
+        <figure class="imagen-logo">
             <img src="img/The lord fo the rings header.png" alt="logo header">
-        </div>
+        </figure>
         <div class="nav-escritorio">
             <ul>
                 <li><a href="index.html" class="link">Home</a></li>
@@ -51,7 +51,6 @@
             <div class="botones">
                 <button  id="añadir">Añadir</button>
                 <button  id="x3">Agregar x3</button>
-                <button  id="btn-mostrar-tabla">Mostrar tabla</button>
             </div>
         </form>
     </div>
@@ -68,7 +67,7 @@
 
             </tbody>
         </table>
-        <button class="enviar">Borrar</button>
+        <button class="enviar" id="borrar">Borrar personaje</button>
     </div>
     <footer>
         <div class="redes-sociales">  
