--- a/Trabajo web responsive/index.html
+++ b/Trabajo web responsive/index.html
@@ -15,13 +15,13 @@
     <header>
         <div class="logo">
             <h1>La<br> Comunidad<span class="span"> Wiki</span></h1>
-            <div class="boton-menu">
+            <figure class="boton-menu">
                 <img src="./img/menu.png" alt="menu responsive">
-            </div>
+            </figure>
         </div>
-        <div class="imagen-logo">
+        <figure class="imagen-logo">
             <img src="img/The lord fo the rings header.png" alt="logo header">
-        </div>
+        </figure>
         <div class="nav-escritorio">
             <ul>
                 <li><a href="curiosidades.html" class="link">Curiosidades</a></li>
@@ -38,7 +38,7 @@
         </div>
     </header>
         <div class="cuerpo-pagina">
-            <div class="info-principal">
+            <article class="info-principal">
                 <h2>El mejor juego de la historia</h2>
                 <p>
                     Hola ¿como andan fanaticos del señor de los anillos? les contamos un poco nuestra historia, nosotros somos dos fanaticos de la famosa saga de tolkin y de los viedojuegos
@@ -49,8 +49,8 @@
                     en la que ustdes podran crear su propio personaje, si asi es leyeron bien, crear a su propio personaje.
                     esta pagina esta hecha por fans para fans y queremos compartir todo sobre este juegazo de nuestra infancia.
                 </p>
-            </div>
-            <div class="datos">
+            </article>
+            <aside class="datos">
                 <div class="dato1">
                     <h3>Recreacion de escenarios</h3>
                     <p>
@@ -77,7 +77,7 @@
                     </p>
                     <a href="curiosidades.html">Mas info</a>
                 </div>
-            </div>
+            </aside>
         </div>
         <footer>
             <div class="redes-sociales">  
@@ -86,6 +86,7 @@
                     <div class="imagen-red-social">
                         <img src="img/facebook.png" alt="facebook">
                     </div>
+                    
                     <div class="imagen-red-social">
                         <img src="img/instagram.png" alt="Instagram">
                     </div>
