--- a/Trabajo web responsive/personajes.html
+++ b/Trabajo web responsive/personajes.html
@@ -14,13 +14,13 @@
     <header>
         <div class="logo">
             <h1>La<br> Comunidad<span class="span"> Wiki</span></h1>
-            <div class="boton-menu">
+            <figure class="boton-menu">
                 <img src="./img/menu.png" alt="menu responsive">
-            </div>
+            </figure>
         </div>
-        <div class="imagen-logo">
+        <figure class="imagen-logo">
             <img src="img/The lord fo the rings header.png" alt="logo header">
-        </div>
+        </figure>
         <div class="nav-escritorio">
             <ul>
                 <li><a href="index.html" class="link">Home</a></li>
