trabajo al 98% (solo falta la semantica)

--- a/Trabajo web responsive/creaTuPersonaje.html
+++ b/Trabajo web responsive/creaTuPersonaje.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crea</title>
+    <title>La Comunidad</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +41,7 @@
             <label for="nombre">Nombre de tu personaje:</label>
                 <input type="text" name="nombre" id="nombre">
             <label for="clase">Clase de tu personaje:</label>
-                <input type="text" name="clase" id="clase">
+                <input type="text" name="clase" id="clase" placeholder="hombre,mago,hobbit,elfo">
             <label for="habilidades">Habilidades:</label>
                 <input type="text" name="habilidades" id="habilidades">
             <label for="armas">Armas:</label>
